--- a/index.html
+++ b/index.html
@@ -20,10 +20,25 @@
                       tecnologias, desenvolvo para area web com PHP, CSS, HTML5, JAVASCRIPT, 
                       BOOTSTRAP, GIT, LARAVEL e para servidores UBUNTU SERVER, MYSQL voltados 
                       ais para a parte web, uso um pouco do PHOTOSHOP somente para alguns detalhes 
-                      front-end das paginas, agradeço pela paciência por ler um pouco do meu trabalho.</p>                      
-                </td>                                 
-            </tr>
-          </table>
+                      front-end das paginas, agradeço pela paciência por ler um pouco do meu trabalho.</p>
+                      <div class="links">
+                        Links                   
+                        <p>
+                            EMAIL:<br>
+                            osvaldo_filho@live.com
+                        </p>                       
+                        <p>
+                            GITHUB:<br>
+                            https://github.com/DicoLOF/</p>                      
+                        <p>
+                            LINKEDIN:<br>
+                            https://www.linkedin.com/in/-osvaldofilho-/
+                        </p>
+                    </div>     
+                                                 
+                </td>                                               
+            </tr>            
+          </table>     
           <table class="escopo">
             <tr>
                 <td>Osvaldo</td>                          
