--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="container">
-          <table class="barra">
+            <table class="barra">
+                <div class="photo"><img src="assets/img/perfil.jpg" width="160" height="160" /></div>                                 
             <tr>
-                <td> 
+                <td>                                 
                     <h2>Sobre</h2> 
                       <p>Oi meu nome é Osvaldo moro no interior de São Paulo sou 
-                      formado em Ciência da Computação, gosto muito da area de 
-                      tecnologia, atualmente trabalho somente em projetos freelancer
-                      para empresas ou projetos pessoais para treinar algumas novas 
-                      tecnologias, desenvolvo para area web com PHP, CSS, HTML5, JAVASCRIPT, 
+                      formado em Ciência da Computação, gosto muito da área de 
+                      tecnologia, atualmente trabalho em projetos freelancer
+                      para empresas ou projetos pessoais, para treinar algumas novas 
+                      tecnologias, desenvolvo para área web com PHP, CSS, HTML5, JAVASCRIPT, 
                       BOOTSTRAP, GIT, LARAVEL e para servidores UBUNTU SERVER, MYSQL voltados 
                       ais para a parte web, uso um pouco do PHOTOSHOP somente para alguns detalhes 
                       front-end das paginas, agradeço pela paciência por ler um pouco do meu trabalho.</p>
