--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="container">
+        <!-- BARRA LATERAL COM FOTO -->
             <table class="barra">
                 <div class="photo"><img src="assets/img/perfil.jpg" width="160" height="160" /></div>                                 
             <tr>
                 <td>                                 
-                    <h2>Sobre</h2> 
+                    <h2>SOBRE</h2> 
                       <p>Oi meu nome é Osvaldo moro no interior de São Paulo sou 
                       formado em Ciência da Computação, gosto muito da área de 
                       tecnologia, atualmente trabalho em projetos freelancer
@@ -23,11 +24,15 @@
                       ais para a parte web, uso um pouco do PHOTOSHOP somente para alguns detalhes 
                       front-end das paginas, agradeço pela paciência por ler um pouco do meu trabalho.</p>
                       <div class="links">
-                        Links                   
+                        LINKS                   
                         <p>
                             EMAIL:<br>
                             osvaldo_filho@live.com
-                        </p>                       
+                        </p>   
+                        <p>
+                            EMAIL:<br>
+                            dico.sistem@gmail.com
+                        </p>                    
                         <p>
                             GITHUB:<br>
                             https://github.com/DicoLOF/</p>                      
@@ -35,11 +40,15 @@
                             LINKEDIN:<br>
                             https://www.linkedin.com/in/-osvaldofilho-/
                         </p>
-                    </div>     
-                                                 
+                    </div> 
+                    <div class="obj">
+                        OBJETIVO:<br>
+                        <p>Estou disposto a aprender e fazer o melhor pela empresa.</p>                       
+                    </div>                                                  
                 </td>                                               
             </tr>            
-          </table>     
+          </table>  
+          <!-- NOME DO TOPO DO CURRICULO   -->
           <table class="escopo">
             <tr>
                 <td>Osvaldo</td>                          
@@ -50,7 +59,8 @@
             <tr>
                 <td class="escopo"><p>Desenvolvedor PHP</p></td>
             </tr>
-          </table>   
+          </table>
+          <!-- INFORMAÇÕES PRINCIPAIS -->
           <table class="whatsapp">
             <tr>
                 <td><i class="fas fa-map-marker-alt"></i> Presidente Epitácio - SP</td>                          
@@ -61,7 +71,71 @@
             <tr>
                 <td><i class="fas fa-envelope-open"></i> Presidente Epitácio - SP</td>
             </tr>
-          </table>       
+          </table>
+          <div class="separar"><hr></div>  
+          <!-- EXPERIÊNCIA PROFISSIONAL -->
+          <table class="section">
+            <tr>
+                <td><h2>EXPERIÊNCIA</h2></td>
+            </tr>
+            <tr>                
+                <td>FREELANCER:<br>
+                <p>Desenvolvedor Web PHP, HTML5, CSS, JAVASCRIPT, BOOTSTRAP, GIT, <br>
+                    LARAVEL, UBUNTU SERVER, MYSQL.
+                </p>
+                </td>
+            </tr>
+            <tr class="espaco">                
+                <td>EMPRESA: OMOTE E CIA LTDA<br>
+                <p>Auxiliar fiscal, Tributação, Cadastro de Produtos, Suporte TI.<br>
+                    PERIODO: 16/02/2007 ainda como CLT nesta empresa.
+                </p>
+                </td>
+            </tr>
+          </table>
+          <div class="separar"><hr></div> 
+          <!-- CURSOS E FACULDADE -->
+          <table class="section">
+            <tr>
+                <td><h2>ESCOLARIDADE E CURSOS</h2></td>
+            </tr>
+            <tr>                
+                <td><i class="fas fa-school"></i> UNIESP - FAPE:<br>
+                <p>2010 - 2014 Presidente Epitácio - SP <br>
+                Bacharel Ciência da Computação
+                </p>           
+                </td>
+            </tr>
+            <tr class="espaco">                
+                <td><i class="fas fa-school"></i> ACIPI:<br>
+                    <p>2009 - 2010 Presidente Epitácio - SP <br>
+                        Técnico em Formatação Manutenção de Computadores
+                    </p> 
+                </td>
+            </tr>
+          </table>
+          <div class="separar"><hr></div>
+          <!-- DADOS PESSOAIS -->
+          <table class="section">
+            <tr>
+                <td><h2>DADOS PESSOAIS</h2></td>
+            </tr>
+            <tr>                
+                <td><i class="fas fa-users"></i> ESTADO CIVIL:<br>
+                    <p>Casado</p>           
+                </td>
+            </tr>
+            <tr class="espaco">                
+                <td><i class="fas fa-calendar-alt"></i> DATA NASCIMENTO:<br>
+                    <p>13/01/1988</p> 
+                </td>
+            </tr>
+            <tr class="espaco">                
+                <td><i class="fas fa-car-side"></i> HABILITAÇÃO:<br>
+                    <p>A/B: Carro e Moto.</p> 
+                </td>
+            </tr>
+          </table>
     </div>    
 </body>
 </html>
