--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                       formado em Ciência da Computação, gosto muito da área de 
                       tecnologia, atualmente trabalho em projetos freelancer
                       para empresas ou projetos pessoais, para treinar algumas novas 
-                      tecnologias, desenvolvo para área web com PHP, CSS, HTML5, JAVASCRIPT, 
-                      BOOTSTRAP, GIT, LARAVEL e para servidores UBUNTU SERVER, MYSQL voltados 
-                      ais para a parte web, uso um pouco do PHOTOSHOP somente para alguns detalhes 
+                      tecnologias, desenvolvo com PHP, CSS, HTML5, JAVASCRIPT, BOOTSTRAP, 
+                      GIT, LARAVEL e para servidores UBUNTU SERVER, MYSQL voltados 
+                      mais para a parte web, uso um pouco do PHOTOSHOP somente para alguns detalhes 
                       front-end das paginas, agradeço pela paciência por ler um pouco do meu trabalho.</p>
                       <div class="links">
                         LINKS                   
@@ -69,7 +69,7 @@
                 <td><i class="fas fa-phone"></i> (18)9.9708 - 0739</td>
             </tr>
             <tr>
-                <td><i class="fas fa-envelope-open"></i> Presidente Epitácio - SP</td>
+                <td><i class="fas fa-envelope-open"></i> osvaldo_filho@live.com</td>
             </tr>
           </table>
           <div class="separar"><hr></div>  
@@ -80,7 +80,7 @@
             </tr>
             <tr>                
                 <td>FREELANCER:<br>
-                <p>Desenvolvedor Web PHP, HTML5, CSS, JAVASCRIPT, BOOTSTRAP, GIT, <br>
+                <p>Desenvolvedor PHP, HTML5, CSS, JAVASCRIPT, BOOTSTRAP, GIT,<br>
                     LARAVEL, UBUNTU SERVER, MYSQL.
                 </p>
                 </td>
