--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <!-- BARRA LATERAL COM FOTO -->
-            <table class="barra">
+            <table class="side">
                 <div class="photo"><img src="assets/img/perfil.jpg" width="160" height="160" /></div>                                 
             <tr>
                 <td>                                 
@@ -49,7 +49,7 @@
             </tr>            
           </table>  
           <!-- NOME DO TOPO DO CURRICULO   -->
-          <table class="escopo">
+          <table class="top">
             <tr>
                 <td>Osvaldo</td>                          
             </tr>
@@ -57,7 +57,7 @@
                 <td>Lopes de Oliveira Filho</td>
             </tr>
             <tr>
-                <td class="escopo"><p>Desenvolvedor PHP</p></td>
+                <td class="top"><p>Desenvolvedor PHP</p></td>
             </tr>
           </table>
           <!-- INFORMAÇÕES PRINCIPAIS -->
@@ -66,13 +66,13 @@
                 <td><i class="fas fa-map-marker-alt"></i> Presidente Epitácio - SP</td>                          
             </tr>
             <tr>
-                <td><i class="fas fa-phone"></i> (18)9.9708 - 0739</td>
+                <td><i class="fas fa-phone"></i> (18) 9.9708 - 0739</td>
             </tr>
             <tr>
                 <td><i class="fas fa-envelope-open"></i> osvaldo_filho@live.com</td>
             </tr>
           </table>
-          <div class="separar"><hr></div>  
+          <div class="bar"><hr></div>  
           <!-- EXPERIÊNCIA PROFISSIONAL -->
           <table class="section">
             <tr>
@@ -85,7 +85,7 @@
                 </p>
                 </td>
             </tr>
-            <tr class="espaco">                
+            <tr>                
                 <td>EMPRESA: OMOTE E CIA LTDA<br>
                 <p>Auxiliar fiscal, Tributação, Cadastro de Produtos, Suporte TI.<br>
                     PERIODO: 16/02/2007 ainda como CLT nesta empresa.
@@ -93,7 +93,7 @@
                 </td>
             </tr>
           </table>
-          <div class="separar"><hr></div> 
+          <div class="bar"><hr></div> 
           <!-- CURSOS E FACULDADE -->
           <table class="section">
             <tr>
@@ -106,7 +106,7 @@
                 </p>           
                 </td>
             </tr>
-            <tr class="espaco">                
+            <tr>                
                 <td><i class="fas fa-school"></i> ACIPI:<br>
                     <p>2009 - 2010 Presidente Epitácio - SP <br>
                         Técnico em Formatação Manutenção de Computadores
@@ -114,7 +114,7 @@
                 </td>
             </tr>
           </table>
-          <div class="separar"><hr></div>
+          <div class="bar"><hr></div>
           <!-- DADOS PESSOAIS -->
           <table class="section">
             <tr>
@@ -125,12 +125,12 @@
                     <p>Casado</p>           
                 </td>
             </tr>
-            <tr class="espaco">                
+            <tr>                
                 <td><i class="fas fa-calendar-alt"></i> DATA NASCIMENTO:<br>
                     <p>13/01/1988</p> 
                 </td>
             </tr>
-            <tr class="espaco">                
+            <tr>                
                 <td><i class="fas fa-car-side"></i> HABILITAÇÃO:<br>
                     <p>A/B: Carro e Moto.</p> 
                 </td>
