--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                 <td><h2>ESCOLARIDADE E CURSOS</h2></td>
             </tr>
             <tr>                
+                <td><i class="fas fa-school"></i> UNIVESP - EAD:<br>
+                <p>2022 - Cursando ... Polo Presidente Epitácio - SP<br>
+                Bacharel Engenharia de Computação
+                </p>           
+                </td>
+            </tr>
+            <tr>                
                 <td><i class="fas fa-school"></i> UNIESP - FAPE:<br>
                 <p>2010 - 2014 Presidente Epitácio - SP <br>
                 Bacharel Ciência da Computação
