--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </td>
             </tr>
             <tr>                
-                <td><i class="fas fa-school"></i> ACIPI:<br>
+                <td><i class="fas fa-school"></i> ACIPE:<br>
                     <p>2009 - 2010 Presidente Epitácio - SP <br>
                         Técnico em Formatação Manutenção de Computadores
                     </p> 
