--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
             <tr>
                 <td>                                 
                     <h2>SOBRE</h2> 
-                      <p>Oi meu nome é Osvaldo moro no interior de São Paulo sou 
-                      formado em Ciência da Computação, gosto muito da área de 
-                      tecnologia, atualmente trabalho em projetos freelancer
-                      para empresas ou projetos pessoais, para treinar algumas novas 
-                      tecnologias, desenvolvo com PHP, CSS, HTML5, JAVASCRIPT, BOOTSTRAP, 
-                      GIT, LARAVEL e para servidores UBUNTU SERVER, MYSQL voltados 
-                      mais para a parte web, uso um pouco do PHOTOSHOP somente para alguns detalhes 
-                      front-end das paginas, agradeço pela paciência por ler um pouco do meu trabalho.</p>
+                      <p>Oi meu nome é Osvaldo moro no interior de São Paulo sou formado em Ciência da Computação,
+                         gosto muito da área de tecnologia, atualmente trabalho em projetos freelancer para
+                         empresas ou projetos pessoais para treinar novas tecnologias ou melhorar ainda mais 
+                         meus conhecimentos, desenvolvo com PHP, CSS, HTML5, JAVASCRIPT, BOOTSTRAP, GIT,
+                         LARAVEL e para servidores UBUNTU SERVER e MYSQL com foco mais para a parte web, 
+                         uso um pouco do PHOTOSHOP somente para alguns detalhes front-end das paginas, fico a
+                         disposição para mais informações..</p>
                       <div class="links">
                         LINKS                   
                         <p>
@@ -57,7 +56,7 @@
                 <td>Lopes de Oliveira Filho</td>
             </tr>
             <tr>
-                <td class="top"><p>Desenvolvedor PHP</p></td>
+                <td class="top"><p>Desenvolvedor Web</p></td>
             </tr>
           </table>
           <!-- INFORMAÇÕES PRINCIPAIS -->
