--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                         </p>   
                         <p>
                             EMAIL:<br>
-                            dico.sistem@gmail.com
+                            osvaldolops.filho@gmail.com
                         </p>                    
                         <p>
                             GITHUB:<br>
-                            https://github.com/DicoLOF/</p>                      
+                            https://github.com/osvaldolopes</p>                      
                         <p>
                             LINKEDIN:<br>
                             https://www.linkedin.com/in/-osvaldofilho-/
