--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <td><h2>DADOS PESSOAIS</h2></td>
             </tr>
             <tr>                
-                <td><i class="fas fa-users"></i> ESTADO CIVIL:<br>
+                <td><i class="fas fa-user"></i> ESTADO CIVIL:<br>
                     <p>Casado</p>           
                 </td>
             </tr>
