--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!-- BARRA LATERAL COM FOTO -->
             <table class="side">
-                <div class="photo"><img src="assets/img/perfil.jpg" width="160" height="160" /></div>                                 
+                <div class="photo"><img src="assets/img/perfill.jpg" width="160" height="160" /></div>                                 
             <tr>
                 <td>                                 
                     <h2>SOBRE</h2> 
